fix survey dropdown selector width on small screens fixes #286

--- a/www/blocks/page/_surveys.scss
+++ b/www/blocks/page/_surveys.scss
@@ -38,4 +38,10 @@
     }
   }
 
+  #selector-region {
+    max-width: 80%;
+    select {
+      width: 100%;
+    }
+  }
 }
